--- a/_publications/2021-chr.md
+++ b/_publications/2021-chr.md
@@ -1,12 +1,12 @@
 ---
-title: "Conformal Histogral Regression"
+title: "Conformal Prediction using Conditional Histograms"
 collection: publications
 permalink: /publication/2021-chr
 excerpt: "This paper develops efficient conformity scores for non-parametric regression."
 date: 2021-05-18
-venue: 'pre-print'
+venue: 'Advances in Neural Information Processing Systems 33 (NeurIPS 2021, spotlight presentation)'
 paperurl: 'https://arxiv.org/abs/2105.08747'
-citation: 'Sesia and Romano (2021). &quot;Conformal Histogral Regression.&quot; <i>arXiv</i>.'
+citation: 'Sesia and Romano (2021). &quot;Conformal Prediction using Conditional Histograms.&quot; <i>arXiv</i>.'
 ---
 
 **Abstract**
