--- a/_publications/2021-mekf.md
+++ b/_publications/2021-mekf.md
@@ -1,12 +1,12 @@
 ---
-title: "Searching for consistent associations with a multi-environment knockoff filter"
+title: "Searching for robust associations with a multi-environment knockoff filter"
 collection: publications
 permalink: /publication/2021-mekf
-excerpt: "This paper develops a method based on model-X knockoffs to find conditional associations that are consistent across diverse environments, controlling the false discovery rate."
+excerpt: "This paper develops a method based on model-X knockoffs to find conditional associations that are robust across diverse environments, controlling the false discovery rate."
 date: 2021-06-08
-venue: 'pre-print'
-paperurl: 'https://arxiv.org/abs/2106.04118'
-citation: 'Li, Sesia, Romano, Candès, and Sabatti (2021). &quot;Searching for consistent associations with a multi-environment knockoff filter.&quot; <i>arXiv</i>.'
+venue: 'Biometrika'
+paperurl: 'https://doi.org/10.1093/biomet/asab055'
+citation: 'Li, Sesia, Romano, Candès, and Sabatti (2021). &quot;Searching for robust associations with a multi-environment knockoff filter.&quot; <i>Biometrika</i>. asab055.'
 ---
 
 **Abstract**
