--- a/_publications/2021-chr.md
+++ b/_publications/2021-chr.md
@@ -6,7 +6,7 @@ excerpt: "This paper develops efficient conformity scores for non-parametric reg
 date: 2021-05-18
 venue: 'Advances in Neural Information Processing Systems 33 (NeurIPS 2021, spotlight presentation)'
 paperurl: 'https://arxiv.org/abs/2105.08747'
-citation: 'Sesia and Romano (2021). &quot;Conformal Prediction using Conditional Histograms.&quot; <i>arXiv</i>.'
+citation: 'Sesia and Romano (2021). &quot;Conformal Prediction using Conditional Histograms.&quot; <i>Advances in Neural Information Processing Systems 33</i>.'
 ---
 
 **Abstract**
