--- a/_publications/2021-mot.md
+++ b/_publications/2021-mot.md
@@ -2,11 +2,9 @@
 title: "Testing for Outliers with Conformal p-values"
 collection: publications
 permalink: /publication/2021-mot
-excerpt: "This paper studies the construction of p-values for nonparametric outlier detection, taking a multiple-testing perspective."
+excerpt: ''
 date: 2021-04-18
-venue: 'pre-print'
-paperurl: 'https://arxiv.org/abs/2104.08279'
-citation: 'Bates, Candès, Lei, Romano, and Sesia (2021). &quot;Testing for Outliers with Conformal p-values.&quot; <i>arXiv</i>.'
+venue: 'Annals of Statistics (in press)'
 ---
 
 **Abstract**
