--- a/_publications/2022-sskf.md
+++ b/_publications/2022-sskf.md
@@ -1,5 +1,5 @@
 ---
-title: "Searching for subgroup-specific associations while controlling the false discovery rate"
+title: "Searching for local associations while controlling the false discovery rate"
 collection: publications
 permalink: /publication/2022-sskf
 excerpt: ''
@@ -9,7 +9,7 @@ venue: 'pre-print'
 
 **Abstract**
 
-This paper introduces an innovative method for conducting conditional independence testing in high-dimensional data, facilitating the automated discovery of significant associations within distinct subgroups of a population, all while controlling the false discovery rate. This is achieved by expanding upon the model-X knockoff filter to provide more informative inferences. Our enhanced inferences can help explain sample heterogeneity and uncover interactions, making better use of the capabilities offered by modern machine learning models. Specifically, our method is able to leverage any model for the identification of data-driven hypotheses pertaining to interesting population subgroups. Then, it rigorously test these hypotheses without succumbing to selection bias. Importantly, our approach is efficient and does not require sample splitting. We demonstrate the effectiveness of our method through simulations and numerical experiments, using data derived from a randomized experiment featuring multiple treatment variables.
+We introduce local conditional hypotheses that express how the relation between explanatory variables and outcomes changes across different contexts, described by covariates. By expanding upon the model-X knockoff filter, we show how to adaptively discover these local associations, all while controlling the false discovery rate. Our enhanced inferences can help explain sample heterogeneity and uncover interactions, making better use of the capabilities offered by modern machine learning models. Specifically, our method is able to leverage any model for the identification of data-driven hypotheses pertaining to different contexts. Then, it rigorously test these hypotheses without succumbing to selection bias. Importantly, our approach is efficient and does not require sample splitting. We demonstrate the effectiveness of our method through numerical experiments and by studying the genetic architecture of Waist-Hip-Ratio across different sexes in the UKBiobank. 
 
 
-[Download paper here](http://msesia.github.io/files/sskf.pdf)
+[Download paper here](https://arxiv.org/pdf/2412.02182)
