Improved description of research

--- a/_publications/2021-chr.md
+++ b/_publications/2021-chr.md
@@ -6,5 +6,6 @@ year: '2021'
 bibtex: /assets/bibtex/2021-chr.txt
 preprint: https://arxiv.org/abs/2105.08747
 published: https://proceedings.neurips.cc/paper/2021/hash/31b3b31a1c2f8a370206f111127c0dbd-Abstract.html
-icon: 🎯
+topics:
+  - uncertainty-quantification
 ---
