--- a/_publications/2021-mekf.md
+++ b/_publications/2021-mekf.md
@@ -6,5 +6,7 @@ year: '2021'
 bibtex: /assets/bibtex/2021-mekf.txt
 preprint: https://arxiv.org/abs/2106.04118
 published: https://doi.org/10.1093/biomet/asab055
-icon: 🔍🧬
+topics:
+  - reproducible-variable-selection
+  - statistical-genetics
 ---
