--- a/_publications/2021-mot.md
+++ b/_publications/2021-mot.md
@@ -6,5 +6,6 @@ year: '2023'
 bibtex: /assets/bibtex/2021-mot.txt
 preprint: https://arxiv.org/abs/2104.08279
 published: doi.org/10.1214/22-AOS2244
-icon: 🎯
+topics:
+  - uncertainty-quantification
 ---
