--- a/_publications/2022-sskf.md
+++ b/_publications/2022-sskf.md
@@ -6,5 +6,7 @@ year: '2024'
 bibtex: /assets/bibtex/2022-sskf.txt
 preprint: https://arxiv.org/abs/2412.02182
 published:
-icon: 🔍🧬
+topics:
+  - reproducible-variable-selection
+  - statistical-genetics
 ---
