--- a/_posts/2025-05-01-ICML 2025.md
+++ b/_posts/2025-05-01-ICML 2025.md
@@ -9,4 +9,4 @@ My collaborators and I had two papers accepted to the International Conference o
 
 The **poster paper**, with Meshi Bashari and Yaniv Romano, introduces a robust conformal outlier detection method that can work with contaminated reference data, using an active data-cleaning strategy. [Read more](/publications/#robust-conformal-outlier-detection-under-contaminated-reference-data)
 
-The **spotlight paper**, with Vladimir Svetnik, presents a doubly robust conformal method for survival analysis with right-censored data, offering strong performance even when survival models are misspecified. [Read more](/publications/#doubly-robust-conformalized-survival-analysis-with-right-censored-data)
+The **spotlight paper**, with Vladimir Svetnik, presents a doubly robust conformal method for survival analysis with right-censored data, offering reliable inferences even when survival models are misspecified. [Read more](/publications/#doubly-robust-conformalized-survival-analysis-with-right-censored-data)
