--- a/_publications/2026-sskf.md
+++ b/_publications/2026-sskf.md
@@ -1,11 +1,11 @@
 ---
 title: Searching for local associations while controlling the false discovery rate
 authors: P. Gablenz, M. Sesia, T. Sun, C. Sabatti
-venue: pre-print
-year: '2024'
-bibtex: /assets/bibtex/2022-sskf.txt
+venue: Journal of the American Statistical Association
+year: '2026'
+bibtex: /assets/bibtex/2026-sskf.txt
 preprint: https://arxiv.org/abs/2412.02182
-published:
+published: https://doi.org/10.1080/01621459.2026.2616856
 topics:
   - reproducible-variable-selection
   - statistical-genetics
